# OS_lab_4

./: CMakeLists.txt
src/: CMakeLists.txt  message.h  receiver.cpp  sender.cpp
tests/: CMakeLists.txt  tests_main.cpp
